--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,8 +24,7 @@ jobs:
         id: build
         continue-on-error: false
         run: |
-          echo "Using '$CI_REPOSITORY_NAME_SLUG/' as the base while building"
-          fpm build --base=/$CI_REPOSITORY_NAME/
+          fpm build
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         if: ${{ github.ref == 'refs/heads/main' }}
