--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,48 +25,28 @@ jobs:
       - name: Build the pages with fpm
         id: build
         continue-on-error: false
-        run: |
-          echo "Using '$CI_REPOSITORY_NAME_SLUG/' as the base while building"
-          fpm build
+        run: fpm build
       - uses: actions/upload-artifact@master
         with:
-          name: GH_PAGES_BUILD
+          name: SSR_BUILD
           path: .build/
-  deploy-gh-pages:
+  deploy:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - name: Prepare `gh-pages` branch creation
-        id: clone_main
+      - name: Checkout build branch
         uses: actions/checkout@v2
-      - name: Check if `gh-pages` branch exists
-        id: branch_exists
-        continue-on-error: true
-        run: /usr/bin/git ls-remote --heads origin gh-pages | grep ""
-      - name: Create branch if not exists
-        id: create_branch
-        if: steps.branch_exists.outcome != 'success'
-        run: |
-          git config --global user.email "actions-user@users.noreply.github.com"
-          git config --global user.name "actions-user"
-          git checkout --orphan gh-pages
-          git reset --hard
-          git commit --allow-empty -m "Initializing gh-pages branch"
-          git push origin gh-pages
-      - name: Checkout gh-pages branch
-        uses: actions/checkout@v2
-        if: steps.branch_exists.outcome == 'success'
         with:
-          ref: gh-pages
+          ref: build
       - run: /bin/rm -rf *
       - uses: actions/download-artifact@master
         with:
-          name: GH_PAGES_BUILD
+          name: SSR_BUILD
           path: .
       - uses: stefanzweifel/git-auto-commit-action@v4
         name: Commit changes to build branch
         with:
           commit_message: SSR build
-          branch: gh-pages
+          branch: build
           commit_options: '--no-verify --signoff'
           repository: .
