--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,6 +7,7 @@ on:
       - '**.ftd'
       - '**.md'
   workflow_dispatch:
+  workflow_call:
 env:
   CARGO_TERM_COLOR: always
 
@@ -14,8 +15,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout main branch
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
+      - uses: FranzDiebold/github-env-vars-action@v2
       - name: Install fpm
         id: install_fpm
         continue-on-error: false
@@ -24,27 +25,9 @@ jobs:
         id: build
         continue-on-error: false
         run: fpm build
-      - uses: actions/upload-artifact@master
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
+        if: ${{ github.ref == 'refs/heads/main' }}
         with:
-          name: SSR_BUILD
-          path: .build/
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Checkout build branch
-        uses: actions/checkout@v2
-        with:
-          ref: build
-      - run: /bin/find . ! -path ./CNAME -delete
-      - uses: actions/download-artifact@master
-        with:
-          name: SSR_BUILD
-          path: .
-      - uses: stefanzweifel/git-auto-commit-action@v4
-        name: Commit changes to build branch
-        with:
-          commit_message: SSR build
-          branch: build
-          commit_options: '--no-verify --signoff'
-          repository: .
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./.build
