--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,6 +16,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/upload-artifact@master
+        with:
+          name: SSR_BUILD
+          path: CNAME
       - uses: FranzDiebold/github-env-vars-action@v2
       - name: Install fpm
         id: install_fpm
@@ -31,3 +35,10 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./.build
+      - uses: actions/checkout@v3
+        with:
+          ref: gh-pages
+      - uses: actions/download-artifact@master
+        with:
+          name: SSR_BUILD
+          path: .
