--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,8 +4,8 @@ on:
   push:
     branches: [ main ]
     paths:
-      - '**.ftd'
-      - '**.md'
+    - '**.ftd'
+    - '**.md'
   workflow_dispatch:
   workflow_call:
 env:
@@ -16,10 +16,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/upload-artifact@master
-        with:
-          name: SSR_BUILD
-          path: CNAME
       - uses: FranzDiebold/github-env-vars-action@v2
       - name: Install fpm
         id: install_fpm
@@ -28,17 +24,14 @@ jobs:
       - name: Build the pages with fpm
         id: build
         continue-on-error: false
-        run: fpm build
+        run: |
+          echo "Using '$CI_REPOSITORY_NAME_SLUG/' as the base while building"
+          fpm build --base=/$CI_REPOSITORY_NAME/
+      - name: copy CNAME
+        run: '(test -f CNAME && cp CNAME .build) || echo "CNAME does not exist, skipping step"'
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         if: ${{ github.ref == 'refs/heads/main' }}
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./.build
-      - uses: actions/checkout@v3
-        with:
-          ref: gh-pages
-      - uses: actions/download-artifact@master
-        with:
-          name: SSR_BUILD
-          path: .
