--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,14 +19,10 @@ jobs:
       - uses: FranzDiebold/github-env-vars-action@v2
       - name: Install fpm
         id: install_fpm
-        continue-on-error: false
         run: sh -c "$(curl -fsSL https://raw.githubusercontent.com/FifthTry/fpm/main/install-fpm.sh)"
       - name: Build the pages with fpm
         id: build
-        continue-on-error: false
-        run: |
-          echo "Using '$CI_REPOSITORY_NAME_SLUG/' as the base while building"
-          fpm build --base=/$CI_REPOSITORY_NAME/
+        run: fpm build
       - name: copy CNAME
         run: '(test -f CNAME && cp CNAME .build) || echo "CNAME does not exist, skipping step"'
       - name: Deploy
