--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
         run: |
           echo "Using '$CI_REPOSITORY_NAME_SLUG/' as the base while building"
           # To deploy the website using GitHub Pages, use the below command
-          fastn build --edition=2023 --base=/$CI_REPOSITORY_NAME/ --zip-url=${{ steps.get_zip_url.outputs.zip_url }}
+          fastn build --edition=2023 --base=/ --zip-url=${{ steps.get_zip_url.outputs.zip_url }}
           # To deploy the website using Custom Domain, use the below command and comment
           #out the above command when deploying through GitHub Pages 
           #fastn build --edition=2023 --base=/ --zip-url=${{ steps.get_zip_url.outputs.zip_url }}
